manifests/prod/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: zoren-voice-prod
  labels:
    app: zoren-voice-ui
    env: prod
spec:
  type: ClusterIP
  selector:
    app: zoren-voice-ui
    env: prod
  ports:
    - name: http
      port: 80
      targetPort: 3010
      protocol: TCP
