manifests/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zoren-voice-ingress
  namespace: zoren-voice-prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Forwarded-Proto: https";
      more_set_headers "X-Secure-Context: true";
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  tls:
    - hosts:
        - zoren-voice.ashtra.ai
      secretName: zoren-voice-tls
  rules:
    - host: zoren-voice.ashtra.ai
      http:
        paths:
          - path: /api/config
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  number: 80
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
          - path: /voice-audio
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  number: 80
